Mon Oct 31 22:37:42 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* DAnCE/NodeApplication/NodeApplication/NodeApplication.mpc:
	* DAnCE/NodeApplication/NodeApplication/RTConfig_Manager.cpp:
	* DAnCE/NodeApplication/NodeApplication/RTConfig_Manager.h:
	* DAnCE/NodeApplication/NodeApplication/RTConfig_Manager.inl:
	  Added the RT configuration manager that keep track of all the RT
	  resources and policy sets in a NodeApplication.  We still need
	  to hook this up in the RTNodeApp_Configurator.

Mon Oct 31 11:22:41 2005    <Gan Deng@SKYLINENETGEAR>

	* examples/Hello/descriptors/rt-config-example.csr
	* DAnCE/NodeApplicationManager/Containers_Info_Map.cpp
	* DAnCE/NodeApplicationManager/ImplementationInfo.cpp

	  Fixed the descriptor by adding the server resource id tag.

Sun Oct 30 22:49:52 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* DAnCE/NodeManager/Node_Manager.cpp: Fixed missing -a Get_Opt
	  parameter and usage text.  "-a" is used to set the optional
	  command line flags for the NodeApplication.  The logic was there
	  in the Get_Opt loop but the Get_Opt object was not set to parse
	  the flag and the usage text for Node_Manager didn't mention the
	  flag either.  

	  Eventually, the optional command line flags should really come
	  from the ServerResource XML file.

	* NodeApplicationManager/NodeApplicationManager_Impl.cpp: Added a
	  missing space to separate optional command line flags from the
	  default ones.  The old one worked only when no optional
	  commandline flags are presented.

	* ciao/Deployment_Core.idl: Removed "init" method from the
	  Container interface since it is really implementation specific. 
	
	* DAnCE/NodeApplication/Container_Impl.cpp:
	* DAnCE/NodeApplication/Container_Impl.h: Changed the signature of
	  init method to take a PolicyList pointer directly since this is
	  what we really need to initialize a container.
	  
	* DAnCE/NodeApplication/Configurator_Factory.h: Added comments