@@ -1,8 +1,7 @@
 // $Id$
 
 ACE_INLINE
-CIAO::RTResource_Config_Manager::RTResource_Config_Manager (RTCORBA::RTORB_ptr rtorb)
-  : rtorb_ (RTCORBA::RTORB::_duplicate (rtorb))
+CIAO::RTResource_Config_Manager::RTResource_Config_Manager ()
 {
 }
 
